--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon your-server-file.js"
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix modern-e-commerce-front-end",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "data:import": "node seederScript.js"
   },
   "repository": {
     "type": "git",
@@ -21,7 +25,9 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "concurrently": "^8.2.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
