--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix modern-e-commerce-front-end",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "data:import": "node seederScript.js"
+    "data:import": "node seederScript.js",
+    "build": "npm i"
   },
   "repository": {
     "type": "git",
